--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -12,7 +12,9 @@ body {
 </style>
 </head>
 <body>
-	<a href="https://github.com/bynikoala/Softwaredesign">Repository</a>
+	<hr />
+	<br />
+	<a href="https://github.com/bynikoala/Softwaredesign">GitHub Repository</a>
 	<!-- Hier gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
 	
 </body>
