--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -14,7 +14,7 @@ body {
 <body>
 	<hr />
 	<br />
-	<a href="https://github.com/bynikoala/Softwaredesign">GitHub Repository</a>
+	<a href="https://github.com/bynikoala/Softwaredesign" target="_blank">GitHub Repository</a>
 	<!-- Hier gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
 	
 </body>
