--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -16,6 +16,9 @@ body {
 	<a href="https://github.com/bynikoala/Softwaredesign" target="_blank">GitHub Repository</a>
 	<!-- Hier gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
 	<br /><br />
+	Aufgabe 02:
+	<a href="https://github.com/bynikoala/Softwaredesign/blob/master/A02/Program.cs" target="_blank">Code</a>
+	<br />
 	Aufgabe 01: 
 	<a href="https://bynikoala.github.io/Softwaredesign/A01/Chart.pdf" target="_blank">Chart</a>
 	<a href="https://github.com/bynikoala/Softwaredesign/blob/master/A01/Program.cs" target="_blank">Code</a>
