--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -16,15 +16,15 @@ body {
 	<a href="https://github.com/bynikoala/Softwaredesign" target="_blank">GitHub Repository</a>
 	<!-- Hier gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
 	<br /><br />
-	Aufgabe 04: 
-	<a href="https://bynikoala.github.io/Softwaredesign/A04/Protokoll.pdf" target="_blank">Protokoll</a>
+	Aufgabe 04:
+	<a href="https://github.com/bynikoala/Softwaredesign/blob/master/A04/Protokoll.md" target="_blank">Protokoll</a>
 	<a href="https://github.com/bynikoala/Softwaredesign/blob/master/A04/Program.cs" target="_blank">Code</a>
 	<br />
 	Aufgabe 03: 
 	<a href="https://bynikoala.github.io/Softwaredesign/A03/Table.pdf" target="_blank">Table</a>
 	<a href="https://github.com/bynikoala/Softwaredesign/blob/master/A03/Program.cs" target="_blank">Code</a>
 	<br />
-	Aufgabe 02:
+	Aufgabe 02: 
 	<a href="https://github.com/bynikoala/Softwaredesign/blob/master/A02/Program.cs" target="_blank">Code</a>
 	<br />
 	Aufgabe 01: 
