zu späte Abgabe...

--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -16,6 +16,10 @@ body {
 	<a href="https://github.com/bynikoala/Softwaredesign" target="_blank">GitHub Repository</a>
 	<!-- Hier gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
 	<br /><br />
+	Aufgabe 05 (zu spät):
+	<a href="https://bynikoala.github.io/Softwaredesign/A05/Chart.pdf" target="_blank">Chart</a>
+	<a href="https://github.com/bynikoala/Softwaredesign/blob/master/A05/Program.cs" target="_blank">Code</a>
+	<br />
 	Aufgabe 04:
 	<a href="https://github.com/bynikoala/Softwaredesign/blob/master/A04/Protokoll.md" target="_blank">Protokoll</a>
 	<a href="https://github.com/bynikoala/Softwaredesign/blob/master/A04/Program.cs" target="_blank">Code</a>
