--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -17,8 +17,8 @@ body {
 	<!-- Hier gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
 	<br /><br />
 	Aufgabe 05:
-	<a href="https://github.com/bynikoala/Softwaredesign/blob/master/A05/Program.cs" target="_blank">Code</a> (zu spät)
-	<a href="https://bynikoala.github.io/Softwaredesign/A05/Chart.pdf" target="_blank">Chart</a>
+	<a href="https://github.com/bynikoala/Softwaredesign/blob/master/A05/Program.cs" target="_blank">Code</a>
+	<a href="https://bynikoala.github.io/Softwaredesign/A05/Chart.pdf" target="_blank">Chart</a> (zu spät)
 	<br />
 	Aufgabe 04:
 	<a href="https://github.com/bynikoala/Softwaredesign/blob/master/A04/Program.cs" target="_blank">Code</a>
