--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -16,6 +16,10 @@ body {
 	<a href="https://github.com/bynikoala/Softwaredesign" target="_blank">GitHub Repository</a>
 	<!-- Hier gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
 	<br /><br />
+	Aufgabe 06:
+	<a href="https://github.com/bynikoala/Softwaredesign/blob/master/A06" target="_blank">Codes</a>
+	<a href="https://bynikoala.github.io/Softwaredesign/A06/Chart.pdf" target="_blank">Chart</a>
+	<br />
 	Aufgabe 05:
 	<a href="https://github.com/bynikoala/Softwaredesign/blob/master/A05/Program.cs" target="_blank">Code</a>
 	<a href="https://bynikoala.github.io/Softwaredesign/A05/Chart.pdf" target="_blank">Chart</a> (zu spät)
